--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PersonalMobileAssistantForManagingDiabetes</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="study_cursors">Study cursors</string>
+    <string name="_3">3</string>
 </resources>
