Redizajn + prerobene activity a pridavanie noveho zaznamu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="study_cursors">Study cursors</string>
     <string name="_3">3</string>
-    <string name="title_activity_calendar_api">CalendarAPI</string>
+    <string name="title_activity_log_entry">LogEntryActivity</string>
+    <string name="title_activity_add_log">AddLogActivity</string>
+    <string name="title_activity_add_log_entry">AddLogEntry</string>
 </resources>
