--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_title">Dia Manager</string>
+    <string name="title_activity_alarm_notification">AlarmNotificationActivity</string>
 
 </resources>
