--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">PersonalMobileAssistantForManagingDiabetes</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="app_name">Mobilný asistent pre diabetikov</string>
+    <string name="title_activity_main">Menu</string>
     <string name="study_cursors">Study cursors</string>
     <string name="_3">3</string>
-    <string name="title_activity_log_entry">LogEntryActivity</string>
-    <string name="title_activity_add_log">AddLogActivity</string>
-    <string name="title_activity_add_log_entry">AddLogEntry</string>
-    <string name="title_activity_alarm">AlarmActivity</string>
+    <string name="title_activity_log_entry">Záznamy</string>
+    <string name="title_activity_add_log">Pridanie záznamu</string>
+    <string name="title_activity_add_log_entry">Pridanie záznamu</string>
+    <string name="title_activity_alarm">Pripomienky</string>
 
     <string name="intro_message">Welcome to <b>Scheduler</b>!
         This sample demonstrates how you can schedule an alarm that causes a service to
@@ -26,31 +26,33 @@
     <string name="add_task_button">Add Task</string>
 
 
-    <string name="password_hint">Password</string>
+    <string name="password_hint">Heslo</string>
     <string name="email_hint">Email</string>
-    <string name="sign_up_button_label">Sign Up</string>
-    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
-    <string name="signup_error_title">Error!</string>
-    <string name="signup_success">Account successfully created! You can now Login.</string>
-    <string name="login_error_message">Please make sure you enter an email address and password!</string>
-    <string name="login_error_title">Error!</string>
-    <string name="login_button_label">Login</string>
-    <string name="sign_up_text">Sign Up!</string>
-    <string name="title_activity_login">Sign in</string>
-    <string name="add_item">Add New Item</string>
-    <string name="action_logout">Logout</string>
+    <string name="sign_up_button_label">Registrovať</string>
+    <string name="signup_error_message">Uisti sa, že si zadal správny email a heslo!</string>
+    <string name="signup_error_title">Chyba!</string>
+    <string name="signup_success">Účet úspešne vytvorený, môžeš sa prihlásiť</string>
+    <string name="login_error_message">Uisti sa, že si zadal správny email a heslo</string>
+    <string name="login_error_title">Chyba!</string>
+    <string name="login_button_label">Prihlásiť</string>
+    <string name="sign_up_text">Registrovať</string>
+    <string name="title_activity_login">Prihlásiť</string>
+    <string name="add_item">Pridaj nový záznam</string>
+    <string name="action_logout">Odhlásiť</string>
     <string name="title_activity_main2">Main2Activity</string>
-    <string name="title_activity_reminders">RemindersActivity</string>
-    <string name="reminder_name">Nazov pripomienky</string>
-    <string name="reminder_category">Kategoria pripomienky</string>
-    <string name="reminer_datetime">Vyber cas</string>
+    <string name="title_activity_reminders">Pripomienky</string>
+    <string name="reminder_name">Názov pripomienky</string>
+    <string name="reminder_category">Kategória pripomienky</string>
+    <string name="reminer_datetime">Vyber čas</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="app_title">Dia Manager</string>
-    <string name="title_activity_alarm_notification">AlarmNotificationActivity</string>
-    <string name="title_activity_graph_view_example">GraphViewExample</string>
+    <string name="app_title">Mobilný asistent</string>
+    <string name="title_activity_alarm_notification">Pripomienka</string>
+    <string name="title_activity_graph_view_example">Graf glykémii</string>
 
-    <string name="add_log_error_message">Chybne zadane udaje</string>
+    <string name="add_log_error_message">Chybne zadané údaje</string>
+    <string name="logout_button">Odhlásiť</string>
+    <string name="back_to_login">Prihlásiť</string>
 
 </resources>
